Moved 50px left

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -2,6 +2,10 @@
    SINGLE PAGE/POST
    ========================================================================== */
 
+body {
+  transform: translateX(-50px);
+}
+
 #main {
   @include container;
   @include clearfix;
