--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -9,7 +9,8 @@
   height: $masthead-height;
   top: 0;
   width: 100%;
-
+  left: -50px;
+  
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.15s;
