Moved main 50px left

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -2,14 +2,11 @@
    SINGLE PAGE/POST
    ========================================================================== */
 
-body {
-  transform: translateX(-50px);
-}
-
 #main {
   @include container;
   @include clearfix;
   margin-top: 2em;
+  margin-left: -50px;
   padding-left: 1em;
   padding-right: 1em;
   animation: intro 0.3s both;
