--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -6,7 +6,6 @@
   @include container;
   @include clearfix;
   margin-top: 2em;
-  margin-left: -50px;
   padding-left: 1em;
   padding-right: 1em;
   animation: intro 0.3s both;
@@ -22,6 +21,7 @@
     @include span(10 of 12 last);
     @include prefix(0.5 of 12);
     @include suffix(2 of 12);
+    margin-left: -3.84615%;
   }
 
   .page__inner-wrap {
